fixing Uploader bugs